<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/register_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintHorizontal_bias="0.814"
        android:textSize="@dimen/small"
        android:text="@string/register_product"/>

    <EditText
        android:id="@+id/username_id_reg_order"
        android:layout_width="@dimen/mega"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintVertical_bias="0.2"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/address_id_reg_order"
        android:layout_width="@dimen/mega"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintVertical_bias="0.35"
        android:hint="@string/address_id"/>

    <EditText
        android:id="@+id/total_price_reg_order"
        android:layout_width="@dimen/mega"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintVertical_bias="0.5"
        android:hint="@string/total_price"/>

    <EditText
        android:id="@+id/product_id_reg_order"
        android:layout_width="@dimen/mega"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintVertical_bias="0.65"
        android:hint="@string/product_id"/>

    <EditText
        android:id="@+id/product_numbers_reg_order"
        android:layout_width="@dimen/mega"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintVertical_bias="0.8"
        android:hint="@string/numbers"/>

    <Button
        android:id="@+id/btn_reg_order"
        android:layout_width="@dimen/xx_large"
        android:layout_height="@dimen/x_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.935"
        android:background="@drawable/edit_text"
        android:text="@string/reg"/>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_reg_frag"
        android:layout_width="@dimen/super_mega"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="@dimen/mega"/>

    <Button
        android:id="@+id/save_information_btn"
        android:layout_width="@dimen/xx_large"
        android:layout_height="@dimen/x_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.935"
        app:layout_constraintHorizontal_bias="0.9"
        android:background="@drawable/edit_text"
        android:text="@string/save_informations"/>

</android.support.constraint.ConstraintLayout>