<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/register_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintVertical_bias="0.07"
        android:text="@string/introduce_yourself"
        android:textSize="@dimen/small"/>

    <EditText
        android:id="@+id/username_id"
        android:layout_width="@dimen/mega"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintVertical_bias="0.25"
        android:background="@drawable/edit_text"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/id_phone_number"
        android:layout_width="@dimen/mega"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintVertical_bias="0.4"
        android:hint="@string/enter_phone_number"
        android:background="@drawable/edit_text"
        android:inputType="number"/>

    <EditText
        android:id="@+id/id_address"
        android:layout_width="@dimen/mega"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintVertical_bias="0.55"
        android:background="@drawable/edit_text"
        android:hint="@string/enter_address2"
        android:inputType="text"/>

    <Button
        android:id="@+id/btn_reg_id"
        android:layout_width="@dimen/xx_large"
        android:layout_height="@dimen/large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.76"
        android:textSize="@dimen/small"
        android:background="@drawable/button_back"
        android:text="@string/reg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintHorizontal_bias="0.9"
        android:text="برای گرفتن تمامی مشخصاتی که تا کنون ثبت کرده اید "/>

    <Button
        android:id="@+id/here_btn2"
        android:layout_width="50dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.96"
        app:layout_constraintHorizontal_bias="0.22"
        android:textSize="10dp"
        android:background="@drawable/edit_text"
        android:text="@string/here"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintVertical_bias="0.95"
        android:text="@string/second_sentence"/>

</android.support.constraint.ConstraintLayout>