<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/vertical_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.12"
        android:textColor="@android:color/black"
        android:textSize="@dimen/small"
        android:text="@string/select_numbers"/>

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="@dimen/mega"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edit_numbers"
        android:layout_width="@dimen/mega"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/numbers"/>

    <Button
        android:id="@+id/btn_number"
        android:layout_width="@dimen/xx_large"
        android:layout_height="@dimen/large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/simple_button"
        android:textSize="@dimen/medium"
        android:text="@string/reg"/>

</android.support.constraint.ConstraintLayout>